WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65561
Missing null check in WebViewImpl::selectionRange
https://bugs.webkit.org/show_bug.cgi?id=65561
Summary
Missing null check in WebViewImpl::selectionRange
Varun Jain
Reported
2011-08-02 12:31:34 PDT
Missing null check in WebViewImpl::selectionRange
Attachments
Patch
(1.37 KB, patch)
2011-08-02 12:32 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
Patch
(1.38 KB, patch)
2011-08-02 13:08 PDT
,
Varun Jain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Varun Jain
Comment 1
2011-08-02 12:32:25 PDT
Created
attachment 102681
[details]
Patch
Darin Fisher (:fishd, Google)
Comment 2
2011-08-02 13:02:44 PDT
Comment on
attachment 102681
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=102681&action=review
> Source/WebKit/chromium/src/WebViewImpl.cpp:1534 > + return false;
nit: indentation should be 4 spaces
Varun Jain
Comment 3
2011-08-02 13:08:55 PDT
Created
attachment 102688
[details]
Patch
Varun Jain
Comment 4
2011-08-02 13:09:15 PDT
(In reply to
comment #2
)
> (From update of
attachment 102681
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=102681&action=review
> > > Source/WebKit/chromium/src/WebViewImpl.cpp:1534 > > + return false; > > nit: indentation should be 4 spaces
Done
WebKit Review Bot
Comment 5
2011-08-02 15:19:37 PDT
Comment on
attachment 102688
[details]
Patch Clearing flags on attachment: 102688 Committed
r92240
: <
http://trac.webkit.org/changeset/92240
>
WebKit Review Bot
Comment 6
2011-08-02 15:19:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug