Missing null check in WebViewImpl::selectionRange https://bugs.webkit.org/show_bug.cgi?id=65561

Patch by Varun Jain <varunjain@google.com> on 2011-08-02
Reviewed by Darin Fisher.

*  Source/WebKit/chromium/src/WebViewImpl.cpp:

Canonical link: https://commits.webkit.org/81380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92240 268f45cc-cd09-0410-ab3c-d52691b4dbfc